--- a/crawler/package.json
+++ b/crawler/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "chalk": "^5.2.0",
+    "mysql2": "^2.3.3"
   }
 }
